cmake_minimum_required( VERSION 3.16 FATAL_ERROR )
project( mytest )
set( CMAKE_VERBOSE_MAKEFILE ON )
set( SRCS /home/martin/stage/cl-cpp-generator2/example/100_cuda1_1_box/source00/main.cpp )
add_executable( mytest ${SRCS} )
set_property( TARGET mytest PROPERTY CXX_STANDARD 20 )
find_package( PkgConfig REQUIRED )
pkg_check_modules( spdlog REQUIRED spdlog )
target_include_directories( mytest PUBLIC ${spdlog_INCLUDE_DIRS} )
target_compile_options( mytest PUBLIC ${spdlog_CFLAGS_OTHER} )
target_link_libraries( mytest PRIVATE ${spdlog_LIBRARIES} )
target_precompile_headers( mytest PRIVATE fatheader.hpp )
